--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "material-aio-example",
-  "version": "0.0.0",
+  "name": "material-project-timer",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
